tests/derive/enum_unsupported.rs
use hecs::Bundle;

#[derive(Bundle)]
enum Foo {}

fn main() {}
